--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ body {
     scrollbar-color: #2CA6D1;
     transition: all 0.5s ease;
     padding: 0 20px;
+    word-wrap: break-word
 }
 
 .chatbox__messages::-webkit-scrollbar-corner { 
